Fixed 1200px width alignments

--- a/custom_css/custom.css
+++ b/custom_css/custom.css
@@ -2,7 +2,6 @@ body{
     font-family: "PT Sans";
     margin: 0 auto;
     background: #efefef;
-    position: relative;
 }
 
 nav {
@@ -11,19 +10,20 @@ nav {
     min-height: 100px;
     min-width: 100%;
     border-bottom: 7px #056fac solid;
+    margin: auto;
 }
 
 nav div{
-    position: static;
-    align: center;
     max-width: 1200px;
-    display:inline-block;
+    margin: auto;
 }
 
 nav img{
     display: inline-block;
-    padding: 20px 10px 0 0;
+    float: left;
+    padding: 20px 0 0 0;
     transform: scale(0.75,0.75);
+    width:40%;
 }
 
 nav div ul {
@@ -31,14 +31,15 @@ nav div ul {
     margin: 0;
     padding: 0;
     display: inline-block;
+    width:58%;
 }
 
 nav div ul li{
     float: left;
     text-align: center;
     padding: 40px 25px;
+    display: table-column;
 }
-
 
 nav div ul li a{
     display: block;
@@ -57,7 +58,6 @@ div.page{
     max-width:1200px;
     margin: 0 auto;
     background: #efefef;
-    display:inline-block;
 }
 
 div.container{
@@ -90,12 +90,11 @@ div.container p{
 }
 
 div.container div.inner-gray {
-    position: relative;
     display: inline-block;
     background: #efefef ;
-    max-width: 1100px;
+    min-width: 1100px;
     height: 400px;
-    padding: 30px 50px 30px 50px;
+    margin: auto;
 }
 
 div.container div.inner-gray div{
@@ -116,13 +115,13 @@ div.container div.inner-gray div:hover{
 
 div.container div.inner-blue p{
     display: inline-block;
-    max-width:1100px;
+    min-width:1100px;
+    margin: auto;
     padding: 30px 20px 30px 20px;
     background: #5eb4e6;
     color: #292929;
     text-align:justify;
 }
-
 
 div.footer ul.main{
     background: #292929;
@@ -199,7 +198,6 @@ div.footer div.orange-footer div.quick-links .head{
 }
 
 div.footer div.orange-footer div.quick-links ul li{
-    padding: 0 0 0 40px;
     color:black;
     background: none;
     list-style-type: none;
@@ -241,3 +239,5 @@ input{
     font-weight: bold;
     padding-left: 10px;
 }
+
+
